# lightweight_multi_tracker

./: CMakeLists.txt  README.md  centroidtracker.cpp  centroidtracker.h  data.hpp  main.cpp  trackableobject.h
